@@ -17,23 +17,24 @@ Conc=5e-9; %Dye concentration in Moles/L
 px=500; %Image size in Pixels
 pxsize=100; %Pixel Size in nm
 sigmax=5; %width of the guassian in pixels
-nsteps=20; %Number of steps
+nsteps=200; %Number of steps
 
 %% Diffusion Parameters
-dT=0.001; %Time between steps in seconds
+dT=0.01; %Time between steps in seconds
 D=50e6; % Diffusion constant D (in nm^2/s based on 100 nm pixel size, 0.01 s/frame)
 StepSize=sqrt(2*D*dT)/pxsize; %average step size in pixels
 
-Type=3; % 1 = Normal Distribution for walking distances
+Type=1; % 1 = Normal Distribution for walking distances
         % 2 = Poisson Distribution for walking distances
         % 3 = Binomial Distribution for walking distances
         
 %% Parameters For calculating Hitting Rate - from https://doi.org/10.3762%2Fbjnano.9.74)
 surfA=(px*pxsize*1e-9)^2; %Sample surface area in m2
 
-
-
 HitRate=round(surfA*Conc*sqrt(pi*D*1e-18/dT)/2*6.023e23*dT); %Hitting Rate in # of molecules/dT
+
+UncerHR=0.1; % Uncertainity in hitting rate, represented in %
+
 
 % This HitRate represents the number of molecules hitting the surface of
 % the glass in each step and also the number of molecules leaving.
@@ -47,7 +48,7 @@ r1=round(HitRate*(1+Numb));
 
 %% Code specific parameters
 
-Display = true; % true will display the images of walkers, false will not.
+Display = false; % true will display the images of walkers, false will not.
                 % Displaying images of walkers on slower machines or large
                 % variables might crash matlab.
                 
@@ -66,7 +67,7 @@ end
 %% Running the Code
 
 if Type == 1
-    [frame]=NormalWalkers3(A,r1,HitRate,px,sigmax,nsteps,StepSize,Display);
+    [frame,sz]=NormalWalkers3(A,r1,HitRate,UncerHR,px,sigmax,nsteps,StepSize,Display);
 elseif Type == 2
     [frame]=PoissonWalkers3(A,r1,HitRate,px,sigmax,nsteps,StepSize,Display);
 elseif Type == 3
